# afkj-data-scraper

./: .gitignore  README.md  config.py  models.py  pyproject.toml  validator.py
.github/workflows/: ci.yml
extraction/: ocr.py  screenshot.py  template.py
modes/: __init__.py  afk_stages.py  arcane_labyrinth.py  base.py  dream_realm.py  honor_duel.py  supreme_arena.py
navigation/: navigator.py  paths.py
storage/: database.py
tests/: test_config.py  test_database.py  test_models.py  test_modes.py  test_navigator.py  test_ocr.py  test_screenshot.py  test_template.py  test_validator.py
